--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: minimal
 services:
 - docker
 before_install:
-- docker build . --build-arg RAILS_ENV=test -t app/test
+- echo "hello"
 jobs:
   include:
   - stage: Test
