--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "beis-report-official-development-assistance",
   "private": true,
   "dependencies": {
+    "accessible-autocomplete": "^2.0.2",
     "govuk-frontend": "^3.3.0"
   },
   "description": "## Getting started",
