WIP: Define database name for development and test
It appears the the `DATABASE_URL` isn't getting set for the test
environment when using the `rails db:*` commands.

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,9 +7,11 @@ default: &default
 
 development:
   <<: *default
+  database: roda-development
 
 test:
   <<: *default
+  database: roda_test
 
 production:
   <<: *default
