--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DOMAIN=localhost:3000
 ROLLBAR_ACCESS_TOKEN=ROLLBAR_ACCESS_TOKEN
 ROLLBAR_ENV=development
 
-DATABASE_URL=postgres://postgres@localhost:5432/roda-development
+DATABASE_URL=postgres://postgres@localhost:5432
 REDIS_URL=redis://localhost:6379
 
 SECRET_KEY_BASE=secret
