--- a/.env.test
+++ b/.env.test
@@ -5,7 +5,7 @@
 #
 # Reference: https://github.com/bkeepers/dotenv#what-other-env-files-can-i-use
 DOMAIN=test.local
-DATABASE_URL=postgres://postgres@localhost:5432/roda_test
+DATABASE_URL=postgres://postgres@localhost:5432
 NOTIFY_KEY=abc
 NOTIFY_WELCOME_EMAIL_TEMPLATE=123
 REDIS_URL=redis://localhost:6379
